--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,9 @@ nav a:hover {
     padding: 20px;
     margin: 10px;
 }
-
+.active-page a { 
+    color: darkviolet
+}
 table {
     border: 3px solid black;
     width: 100%;
